Fix push-mode mapen visibility

--- a/styles/widgets/common/drawer.less
+++ b/styles/widgets/common/drawer.less
@@ -50,7 +50,7 @@
 
 .dx-drawer-push {
     .dx-drawer-panel-content {
-        z-index: 1;
+        z-index: 0;
     }
 }
 
